Make Point2D Generic for i16, i32, i64
Add a generic implementation of the Point2D struct to allow for it to be more generally used with different row/column limitations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Matthew Hill <GeistInDerSH@gmail.com>"]
 criterion = "0.7.0"
 
 [dependencies]
+num-traits = "0.2.19"
 
 [[bench]]
 name = "benchmarks"
